[package]
name = "solana-gravity-adaptor"
version = "0.0.1"
description = "Gravity Protocol adaptor built on Solana"
authors = ["Shamil Khalilov <shamfama@gmail.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://gravity.tech"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
byteorder = "1.3"
solana-program = "=1.6.1"
thiserror = "1.0.24"
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"


[dev-dependencies]
solana-program-test = "=1.6.1"
solana-sdk = "=1.6.1"

[lib]
crate-type = ["cdylib", "lib"]
