[package]
name = "solana-gravity-adaptor"
version = "0.0.1"
description = "Gravity Protocol adaptor built on Solana"
authors = ["Shamil Khalilov <shamfama@gmail.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://gravity.tech"
edition = "2018"

[features]
default = ["gravity-contract"]
gravity = ["gravity-contract", "nebula-contract", "luport-contract"]
gravity-contract = []
nebula-contract = []
luport-contract = []
no-entrypoint = []
test-bpf = []

[dependencies]
byteorder = "1.3"
solana-program = "=1.6.2"
thiserror = "1.0.24"
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"
serde = "1.0.125"
bincode = "1.3.3"
cfg-if = "1.0.0"
uuid = "0.8.2"

[dev-dependencies]
solana-program-test = "=1.6.2"
solana-sdk = "=1.6.2"
tokio = "1.5.0"
rand = "0.8.3"
hex = "0.4.3"
sha2 = "0.9.3"
clap = "2.33.3"

[lib]
crate-type = ["cdylib", "lib"]
